guard/30-traefik/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc1
  namespace: default
spec:
  ports:
    - name: http
      port: 80
  selector:
    task: whoami

---
apiVersion: v1
kind: Service
metadata:
  name: svc2
  namespace: default
spec:
  ports:
    - name: http
      port: 80
  selector:
    task: whoami
