guard/30-traefik/ingress-annotation.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect-scheme
  namespace: dev
spec:
  redirectScheme:
    scheme: https
    port: "443"
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: test-auth
  namespace: dev
spec:
  basicAuth:
    secret: userssecret
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: "whoami"
  namespace: dev
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: dev-test-auth@kubernetescrd,auth@file
spec:
  rules:
    - host: myapp.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: dev
spec:
  selector:
    app: whoami
  ports:
    - protocol: TCP
      port: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: dev
  labels:
    app: traefiklabs
    app: whoami
spec:
  replicas: 2
  selector:
    matchLabels:
      app: traefiklabs
      app: whoami
  template:
    metadata:
      labels:
        app: traefiklabs
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami:v1
          ports:
            - containerPort: 80
