guard/30-traefik/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutebar
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`example.com`) && PathPrefix(`/foo`)
    kind: Rule
    services:
    - name: svc1
      namespace: default
    - name: svc2
      namespace: default
    - name: mirror1
      namespace: default
      kind: TraefikService      
    middlewares:
    - name: stripprefix
      namespace: foo      
  tls:
    options: 
      name: mytlsoption
      namespace: default
